--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -54,7 +54,7 @@
 
 @layer utilities {
   .sheet-preview {
-    @apply leading-[1.375];
+    @apply text-lg leading-[1.5];
   }
 
   .sheet-preview > hr {
