Changed the theme
Inspired by a gretsch guitar

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -31,7 +31,7 @@
   }
 
   html {
-    @apply bg-gray-50 font-['Outfit'] font-light text-emerald-950;
+    @apply bg-doublemint-50 font-['Outfit'] font-light text-emerald-950;
   }
 
   button {
