Made dark mode functional - I still need to store the state - I still need to make a color palette for dark mode

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -37,7 +37,7 @@
   }
 
   html {
-    @apply bg-doublemint-50 font-['Outfit'] font-light text-deadgreen-700;
+    @apply bg-doublemint-50 font-['Outfit'] font-light text-deadgreen-700 dark:bg-doublemint-950;
   }
 
   button {
