--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -91,4 +91,8 @@
   .sheet-preview > .song-section {
     @apply font-medium text-blue-400 dark:text-inlay-400;
   }
+
+  .sheet-preview > .info {
+    @apply font-medium text-red-400 dark:text-inlay-400;
+  }
 }
